components/skooner/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: skooner
  namespace: skooner
spec:
  ports:
    - port: 80
      targetPort: 4654
  selector:
    k8s-app: skooner
